tinyc/test/good/syn-arrows-pop-optional.asm
main:
    sub sp, 6, sp
    pop rv
    pop -> rv
    pop → rv
    ret
