tinyc/test/bad/syn-pop-comma.asm
main:
    sub sp, 20, sp
    pop , rv
    ret
